Keep v1.30 regression suite Java 8 compatible